@@ -33,7 +33,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'io.github.vcvitaly.k8cp'
-    mainClass = 'io.github.vcvitaly.k8cp.HelloApplication'
+    mainClass = 'io.github.vcvitaly.k8cp.App'
 }
 
 javafx {
@@ -68,15 +68,57 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:5.11.0'
     testImplementation "org.assertj:assertj-core:3.25.1"
     testImplementation "org.testfx:testfx-junit5:4.0.18"
+    testImplementation 'org.testfx:testfx-core:4.0.18'
+    testImplementation 'org.testfx:openjfx-monocle:21.0.2'
+
+    testImplementation 'org.zeroturnaround:zt-zip:1.17'
+    testImplementation 'org.hamcrest:hamcrest:2.1'
+
+    testImplementation ("org.testcontainers:testcontainers:1.19.7") {
+        exclude group: "org.hamcrest", module: "hamcrest-core"
+    }
+    testImplementation ("org.testcontainers:junit-jupiter:1.19.7") {
+        exclude group: "org.hamcrest", module: "hamcrest-core"
+    }
+    testImplementation ("org.testcontainers:k3s:1.19.7") {
+        exclude group: "org.hamcrest", module: "hamcrest-core"
+    }
+
+    testImplementation ("com.google.jimfs:jimfs:1.3.0") {
+        exclude group: "com.google.code.findbugs", module: "jsr305"
+    }
+    implementation 'io.github.bitstorm:tinyzip-core:1.0.0'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs([
+            "--add-exports", "javafx.graphics/com.sun.javafx.application=org.testfx",
+             "--add-opens", "javafx.graphics/com.sun.javafx.application=org.testfx",
+             "--add-opens", "javafx.graphics/com.sun.glass.ui=org.testfx",
+            "--add-opens", "io.github.vcvitaly.k8cp/io.github.vcvitaly.k8cp.controller.init=org.testfx.junit5",
+            "--add-exports", "javafx.base/com.sun.javafx.logging=org.testfx.monocle",
+            "--add-exports", "javafx.graphics/com.sun.javafx.util=org.testfx.monocle",
+            "--add-exports", "javafx.graphics/com.sun.glass.ui=org.testfx.monocle",
+            "--add-opens", "javafx.graphics/com.sun.glass.ui=org.testfx.monocle",
+            "--add-opens", "io.github.vcvitaly.k8cp/io.github.vcvitaly.k8cp.controller.init=org.testfx.monocle",
+            "--add-opens", "io.github.vcvitaly.k8cp/io.github.vcvitaly.k8cp.domain=org.assertj.core",
+            "--add-opens", "io.github.vcvitaly.k8cp/io.github.vcvitaly.k8cp.client.impl=junit.jupiter",
+            "--add-opens", "io.github.vcvitaly.k8cp/io.github.vcvitaly.k8cp=junit.jupiter",
+            "--add-opens", "io.github.vcvitaly.k8cp/io.github.vcvitaly.k8cp.controller=org.testfx.junit5",
+            "-Djava.awt.headless=true", "-Dtestfx.robot=glass", "-Dtestfx.headless=true", "-Dprism.order=sw"
+    ])
 }
 
 jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = [
+            '--strip-debug', // remove if debugging is needed
+            '--compress', '2',
+            '--no-header-files',
+            '--no-man-pages',
+            '--ignore-signing-information'
+    ]
     launcher {
         name = 'app'
     }
@@ -84,6 +126,11 @@ jlink {
 
 jlinkZip {
     group = 'distribution'
+}
+
+tasks.register('dist') {
+    dependsOn clean, jlinkZip
+    description "Calls clean and then jlinkZip"
 }
 
 configurations
